--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,10 +11,15 @@ spring.datasource.username=admin
 spring.datasource.password=0000
 
 # true ??? JPA ??? ?? ??
-spring.jpa.show-sql=true 
+spring.jpa.show-sql=true
 
 # DDL(create, alter, drop) ??? DB? ?? ??? ??? ? ??.
 spring.jpa.hibernate.ddl-auto=update
 
 # JPA? ???? Hibernate? ????? ??? SQL? ???? ????.
 spring.jpa.properties.hibernate.format_sql=true
+
+# 404 Not found Error Handling
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
+spring.mvc.static-path-pattern=/**
