--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,23 +1,4 @@
-# MySQL ??
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# DB Source URL
-spring.datasource.url=jdbc:mysql://localhost:3306/test?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
-
-# DB username
-spring.datasource.username=admin
-
-# DB password
-spring.datasource.password=0000
-
-# true ??? JPA ??? ?? ??
-spring.jpa.show-sql=true
-
-# DDL(create, alter, drop) ??? DB? ?? ??? ??? ? ??.
-spring.jpa.hibernate.ddl-auto=update
-
-# JPA? ???? Hibernate? ????? ??? SQL? ???? ????.
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.use-new-id-generator-mappings=false
 
 # 404 Not found Error Handling
 spring.mvc.throw-exception-if-no-handler-found=true
