--- a/NFTmethods/package.json
+++ b/NFTmethods/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "@pinata/sdk": "^1.1.26",
-    "caver-js": "^1.8.1"
+    "caver-js": "^1.8.1",
+    "fs-extra": "^10.1.0",
+    "rimraf": "^3.0.2"
   }
 }
